--- a/projects/cron-editor/package.json
+++ b/projects/cron-editor/package.json
@@ -6,7 +6,7 @@
     "email": "claudiu@fastmail.com",
     "url": "https://claudiuconstantin.com"
   },
-  "version": "2.0.0-beta",
+  "version": "2.1.0",
   "license": "MIT",
   "repository": {
     "type": "git",
